# enterprise-learning-system-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.manifest.yaml  agent.yaml  azure.yaml  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
.atl/: .skill-registry.cache.json  skill-registry.md
backend/: __init__.py  config.py  main.py  session_store.py
backend/.atl/: skill-registry.md
backend/.chromadb/: chroma.sqlite3
backend/agents/: __init__.py  advisor.py  assessment.py  curator.py  engagement.py  manager.py  study_plan.py
backend/api/: __init__.py  middleware.py  server.py
backend/grounding/: __init__.py  base.py  factory.py
backend/observability/: __init__.py  otel.py
backend/tests/: __init__.py  conftest.py  test_assessment_agent.py  test_assessment_executor.py  test_assessment_grounding_integration.py  test_assessment_integration.py  test_assessment_tools.py  test_curator.py  test_curator_iq_integration.py  test_curator_run1_run2.py  test_dispatcher_assessment.py  test_dispatcher_multiturn.py  test_dispatcher_threading.py  test_foundry_imports.py  test_foundry_iq_tools.py  test_grounding.py  test_grounding_base.py  test_integration_multiturn.py  test_integration_smoke.py  test_middleware.py  test_mock_provider.py  test_scoring.py  test_state_assessment_additions.py  test_state_models.py  test_study_plan_dispatcher.py  test_study_plan_models.py  test_study_plan_tools.py  test_tools.py  test_topics.py  (+2 more)
docs/: AGENTS.md  ARCHITECTURE.md  DATA.md  DIAGRAM.md  WORKFLOW.md
frontend/: .dockerignore  Dockerfile  env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: smoke_test.py  test_hitl.py
(+128 files in other folders)
