[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-learning-system"
version = "0.1.0"
description = "AI-powered enterprise learning and certification platform"
requires-python = ">=3.11"
dependencies = [
    # Microsoft Agent Framework
    "agent-framework>=1.0.0",
    # AG-UI protocol adapter (pre-release — pip install --pre agent-framework-ag-ui)
    "agent-framework-ag-ui>=1.0.0b260225",
    # API layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Data validation
    "pydantic>=2.7.0",
    # Configuration
    "python-dotenv>=1.0.0",
    # OpenTelemetry
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # Foundry IQ Knowledge Base grounding (pre-release — install with: pip install --pre agent-framework-azure-ai-search)
    "agent-framework-azure-ai-search>=1.0.0b260225",
    # Azure AI Foundry — authentication and inference
    "azure-identity>=1.17.0",
    "azure-ai-projects>=2.0.0",
    "azure-ai-inference>=1.0.0b1",
    # HTTP client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Local mock path only — not needed when USE_REAL_IQ=true (container / production)
local = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-dir]
"" = "backend"
